--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul class="nav-links">
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
         <div class="burger">
@@ -30,7 +31,7 @@
         quo expedita voluptas provident necessitatibus maiores, praesentium
         cumque libero nobis consectetur, quos consequatur magnam totam?
       </p>
-      <button>Get Started</button>
+      <button>Know more about us</button>
     </div>
 
     <section>
@@ -89,10 +90,9 @@
     </section>
 
     <section class="cta">
-      <h2>Ready to get started?</h2>
+      <h2>Are you ready to begin?</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
+        Are you prepared and eager to initiate the process? We are excited to move forward with the task at hand and make progress towards our goals.
       </p>
       <button>Sign up now</button>
     </section>
